# dppguard-backend

./: .env.example  .gitignore  LIFECYCLE_DOCUMENTATION.md  README.md  pyproject.toml  seed.py
app/: main.py
app/core/: audit.py  config.py  dependencies.py  logging.py
app/db/: core.py  schema.py
app/models/: auth.py  certificate_definition.py  certification.py  dashboard.py  data_contribution_request.py  dpp.py  material.py  material_definition.py  product.py  product_certification.py  product_contribution.py  product_durability.py  product_environmental.py  product_material.py  product_spare_part.py  product_supplier.py  product_version.py  supplier.py  supplier_dashboard.py  supplier_profile.py  tenant_connection.py  user.py  version_certification.py  version_material.py  version_supplier.py
app/services/: brand.py  certificate_definition.py  certification.py  collaboration.py  dpp.py  material.py  material_definition.py  product.py  product_contribution.py  supplier.py  supplier_dashboard.py  supplier_profile.py  tenant_connection.py  user.py
app/utils/: file_storage.py  qr.py
migrations/: env.py
migrations/versions/: 0bb4481a330c_add_product_description_field.py  1fcd433b0aff_add_dpp_and_it_s_related_models.py  32659ce6b0f6_initial_commit.py  3541736db17b_initial_commit.py  3e56b5af9569_made_manufacturing_country_optional.py  3e708107fd8d_add_lineage_id_to_materials_supply_.py  440d9ed1a45e_add_certificate_type_field.py  48779532fa09_initial_commit.py  50975a90841a_initial_migration.py  57c5e9ff06f1_add_dpp_related_models.py  893fddaabd53_initial.py  (+16 more)
(+22 files in other folders)
